@@ -37,9 +37,11 @@ function rebuildRecentChangesTablePass1()
 			'rc_last_oldid' => 0, // is this ok?
 			'rc_type'       => $dbw->conditional( 'page_is_new != 0', RC_NEW, RC_EDIT ),
 		), array(
-			'rev_timestamp > ' . $dbw->timestamp( $cutoff ),
+			'rev_timestamp > ' . $dbw->addQuotes( $dbw->timestamp( $cutoff ) ),
 			'rev_page=page_id'
-		), $fname, array( 'ORDER BY' => 'rev_timestamp', 'LIMIT' => 5000 )
+		), $fname,
+		array(), // INSERT options
+		array( 'ORDER BY' => 'rev_timestamp', 'LIMIT' => 5000 ) // SELECT options
 	);
 }
 
