@@ -739,6 +739,8 @@ fully support the editing toolbar, but was found to be too confusing.
   when wikibits.js was moved up before user JS inclusion.
 * Added $wgColorErrors: if set, database error messages will be highlighted
   when running command-line scripts in a Unix terminal.
+* (bug 5195) rebuildrecentchanges.php works again; Database::insertSelect now
+  has a parameter for select options.
 
 
 === Caveats ===
